fixed overflow

--- a/style.css
+++ b/style.css
@@ -12,8 +12,7 @@ html,
 body {
     height: auto;
     min-height: 100vh;
-    overflow-x: hidden;
-    overflow-y: auto;
+    overflow: visible;
     position: relative;
 }
 
